@@ -1,5 +1,11 @@
 2007-05-09  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gnome-settings-screensaver.c: converted to a loadable module.
+
+	* gnome-settings-screensaver.h: removed unneeded file.
+
+2007-05-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* gnome-settings-background.c (gnome_settings_module_background_init,
 	gnome_settings_module_background_start): no need to keep the GConfClient
 	around, it is already stored in the GnomeSettingsModule class.
